Fix: Changes hero text size on mobile

--- a/final-portfolio/style.css
+++ b/final-portfolio/style.css
@@ -568,6 +568,12 @@ footer {
     #hero {
         height: 500px;
     }
+    
+    #hero .text-container .text-change span::after {
+        font-size: 23px;
+        line-height: 30px;
+        margin-top: 0;
+    }
 
     .about-content {
         flex-direction: column;
